# Ambient_Scribing_with_Synthetic_Data_Generator

./: .gitignore  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  evaluation_pipeline.py  full_pipeline_LlamaIndex.py  full_pipeline_openai.py  indexing_test.py  manual_benchmark_test.py  manual_commands.txt  patch_torch.py  pyproject.toml  rag_arch.txt  requirements.txt  requirements_lock.txt  requirements_lock_working.txt  run_evals2.ps1  setup_env.bat  test_openai.py  verify_env.py
dissertation_final_main/: table_a_automated_metrics.md
dissertation_plots/: per_section_table.md
evaluation_results_llama1b_main/: evaluation_20260311_151438.json
evaluation_results_llama3b/: evaluation_20260310_121131.json
evaluation_results_phi/: evaluation_20260224_131353.json  evaluation_report_20260226_140520.md
evaluation_results_phi_main/: evaluation_report_20260311_202533.md
final_eval_llama1b_main/: evaluation_report_20260424_005215.md
final_eval_llama3b/: evaluation_20260325_154232.json  evaluation_20260325_161813.json
final_eval_llama3b_main/: evaluation_report_20260423_234315.md
final_eval_llama3b_rag_ablation_final/: evaluation_report_20260422_223741.md
final_eval_phi_rag_ablation_final/: evaluation_20260422_212932.json
final_results/dissertation_final_main/: computed_metrics.json  table_b_judge_scores.md
final_results/final_eval_llama1b_rag_ablation_final/: evaluation_20260422_232402.json  evaluation_report_20260422_232402.md
final_results/final_eval_llama3b_rag_ablation_final/: evaluation_20260422_223741.json
final_results/final_eval_phi_main/: evaluation_report_20260423_220841.md
final_results/medcon_rag_ablation_final/: medcon_report.md  medcon_results.json  medcon_results_full.json
final_results/medcon_results_main/: medcon_report.md  medcon_results_full.json
logprobs_analysis_all/: logprobs_analysis.json  logprobs_report.md
logprobs_analysis_final/: logprobs_report.md
logprobs_analysis_llama32_1b/: logprobs_analysis.json  logprobs_report.md
logprobs_analysis_llama32_3b/: logprobs_analysis.json  logprobs_report.md
logprobs_analysis_phi/: logprobs_analysis.json  logprobs_report.md
logprobs_eval_llama32_1b/: evaluation_report_20260320_161747.md
medcon_results/: medcon_report.md  medcon_results.json
medcon_results_main/: medcon_results.json
medical_knowledge/sample/: abdominal_pain.txt  abdominal_pain_guidelines.txt  cardiology.txt  chest_pain.txt  chest_pain_guidelines.txt  diabetes.txt  emergency.txt  gastroenterology.txt  geriatrics.txt  headache.txt  headache_guidelines.txt  hypertension.txt  mental_health.txt  musculoskeletal.txt  musculoskeletal_guidelines.txt  neurology_acute.txt  neurology_headache.txt  pediatrics_common.txt  pediatrics_illness.txt  respiratory.txt  respiratory_guidelines.txt  skin_conditions.txt  urinary_symptoms.txt
notebooks/: aci_bench_evaluation.ipynb  logprobs_uq_analysis.ipynb  rag_composite.ipynb  rag_plots.ipynb  smile_explainability (1).ipynb  smile_explainability.ipynb
notebooks/logprobs_analysis_output/: logprobs_report.md  table_uq_uncertainty.md
post_eval_results_main/: plot_post_eval.py  post_eval_metrics_20260312_122934.json
post_eval_results_main2/: literature_comparison_20260326_202912.md  metrics_comparison_20260326_202912.md  plot_post_eval.py
post_eval_results_with_bertscore/: literature_comparison_20260312_135142.md  plot_post_eval.py  post_eval_metrics_20260312_133102.json
powershell-scripts/: run_evals.ps1  train_model1.ps1
rag_ablation_final_final/: table_c_rag_ablation.md
rag_ablation_llama1b/: evaluation_20260323_203806.json
rag_ablation_llama3b/: evaluation_20260323_193932.json
rag_ablation_phi_v2/: evaluation_20260323_183605.json
results/dissertation_plots2/: per_section_table.md
results/dissertation_plots_final/: table_a_automated_metrics.md  table_b_judge_scores.md  table_c_rag_ablation.md
results/dissertation_plots_final3/: computed_metrics.json  table_a_automated_metrics.md  table_b_judge_scores.md
results/evaluation_results/: evaluation_20260226_140520.json
results/evaluation_results_llama1b_main/: evaluation_report_20260311_151438.md
results/evaluation_results_llama3b/: evaluation_report_20260310_121131.md
results/evaluation_results_llama3b_main/: evaluation_20260311_171108.json  evaluation_report_20260311_171108.md
results/evaluation_results_phi_main/: evaluation_20260311_202532.json
results/evaluation_results_phi_more_tokensize/: evaluation_20260305_142748.json  evaluation_20260305_155611.json  evaluation_20260306_170921.json  evaluation_report_20260305_142748.md  evaluation_report_20260305_155611.md  evaluation_report_20260306_170921.md
results/evaluation_results_phi_test/: evaluation_20260309_133702.json  evaluation_20260309_141014.json  evaluation_20260309_152700.json  evaluation_report_20260309_133702.md  evaluation_report_20260309_141014.md  evaluation_report_20260309_152700.md
results/final_eval_llama1b/: evaluation_20260325_154610.json  evaluation_20260325_162012.json  evaluation_report_20260325_154610.md  evaluation_report_20260325_162012.md  evaluation_report_20260325_215036.md
results/final_eval_llama1b_rag_ablation/: evaluation_20260413_160809.json  evaluation_20260413_164927.json  evaluation_20260414_114004.json  evaluation_report_20260413_160809.md  evaluation_report_20260413_164927.md  evaluation_report_20260414_114004.md
results/final_eval_llama3b/: evaluation_report_20260325_154232.md  evaluation_report_20260325_161813.md  evaluation_report_20260325_205243.md
results/final_eval_llama3b_rag_ablation/: evaluation_20260413_160622.json  evaluation_20260413_164633.json  evaluation_20260414_102759.json  evaluation_report_20260413_160622.md  evaluation_report_20260413_164633.md  evaluation_report_20260414_102800.md
results/final_eval_phi/: evaluation_20260325_153546.json  evaluation_20260325_161444.json  evaluation_report_20260325_153546.md  evaluation_report_20260325_161444.md  evaluation_report_20260325_193230.md
src/: __init__.py
src/models/: enums.py  (+2 more)
temp_analysis/: temperature_comparison.md  temperature_data.json
(+151 files in other folders)
