[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-scribe-teacher"
version = "0.1.0"
description = "RAG-Enhanced Teacher-Student Pipeline for Synthetic Clinical Data Generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alireza Rashidi"}
]
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# =============================================================================
# DEPENDENCIES
#
# NOTE: PyTorch CUDA and Unsloth are NOT listed here.
# They must be installed in a specific order BEFORE this package.
# See setup_env.bat for the correct procedure.
#
# After PyTorch + Unsloth are installed, run: pip install -e .
# =============================================================================
dependencies = [
    # Embeddings
    "sentence-transformers>=4.0.0",

    # RAG
    "llama-index>=0.10.0,<0.11.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-llms-anthropic>=0.1.0",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-vector-stores-qdrant>=0.1.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "chromadb>=0.4.22",
    "qdrant-client>=1.7.0",

    # LLM Providers
    "openai>=1.0.0",
    "anthropic>=0.28.0",
    "httpx>=0.27.0",
    "litellm>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",

    # Core
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",

    # Structured Output
    "instructor>=0.5.0",

    # Document Processing
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",

    # Evaluation
    "ragas>=0.1.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "nltk>=3.8.0",

    # Tracking
    "mlflow>=2.10.0",

    # Utilities
    "tenacity>=8.2.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]

[project.scripts]
generate-synthetic = "src.pipeline.synthetic_data_pipeline:main"
setup-kb = "src.knowledge_base.indexer:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
